# sendbox

./: .dockerignore  .gitignore  .sendbox.yaml  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  ROADMAP.md  rust-toolchain.toml  rustfmt.toml  setup.sh
.cargo/: config.toml
completions/: sendbox.bash  sendbox.fish  (+1 more)
crates/sendbox-agent/: Cargo.toml
crates/sendbox-agent/src/: error.rs  lib.rs  orchestrator.rs  plan.rs  protocol.rs  traits.rs
crates/sendbox-agent/tests/: agent.rs
crates/sendbox-bpf/: Cargo.toml
crates/sendbox-bpf/src/: error.rs  event.rs  lib.rs  loader.rs  preflight.rs
crates/sendbox-bpf/tests/: live.rs
crates/sendbox-bundle/: Cargo.toml
crates/sendbox-bundle/src/: lib.rs  main.rs
crates/sendbox-cli/: Cargo.toml
crates/sendbox-cli/src/: completions.rs  main.rs
crates/sendbox-cli/tests/: cli.rs
crates/sendbox-config/: Cargo.toml
crates/sendbox-config/src/: lib.rs  persistence.rs  presets.rs
crates/sendbox-config/tests/: config.rs
crates/sendbox-credentials/: Cargo.toml
crates/sendbox-credentials/src/: broker.rs  config.rs  error.rs  github.rs  http1.rs  lib.rs  session.rs  upstream.rs
crates/sendbox-egress/: Cargo.toml
crates/sendbox-egress/src/: address.rs  audit.rs  authorization.rs  connect_broker.rs  connect_proto.rs  dialer.rs  dns_broker.rs  dns_budget.rs  domain.rs  fixture_resolver.rs  forwarding_resolver.rs  gateway.rs  lib.rs  policy.rs  resolver.rs  socks5.rs
crates/sendbox-egress/src/linux/: cgroup.rs  mark.rs  mod.rs  nft.rs  preflight.rs  supervisor.rs
crates/sendbox-egress/tests/: gateway_integration.rs  live_netns.rs
crates/sendbox-exec/: Cargo.toml
crates/sendbox-exec/src/: api.rs  broker.rs  environment.rs  error.rs  lib.rs  policy.rs  runtime.rs  service.rs  session.rs
crates/sendbox-exec/src/platform/: mod.rs
crates/sendbox-exec/src/platform/linux/: agent.rs  capabilities.rs  cgroup.rs  launcher.rs  mod.rs  raw.rs  resolver.rs  rlimits.rs  seccomp.rs
crates/sendbox-exec/tests/: linux_live.rs  portable_api.rs
crates/sendbox-git/: Cargo.toml
crates/sendbox-git/src/: argv.rs  error.rs  identity.rs  lib.rs  pattern.rs  process.rs  service.rs  trusted.rs
crates/sendbox-git/tests/: binary.rs  guard.rs  system.rs
crates/sendbox-mcp/: Cargo.toml
crates/sendbox-mcp/src/: artifact.rs  broker.rs  config.rs  error.rs  framing.rs  jsonrpc.rs  lib.rs  observation.rs  policy.rs
crates/sendbox-mcp/tests/: compatibility.rs  properties.rs
crates/sendbox-policy/: Cargo.toml
crates/sendbox-policy/src/: lib.rs
crates/sendbox-policy/tests/: policy.rs
crates/sendbox-project/: Cargo.toml
crates/sendbox-project/src/: analysis.rs  devcontainer.rs  error.rs  jsonc.rs  lib.rs  refinement.rs  scan.rs
crates/sendbox-project/tests/: analysis.rs  devcontainer.rs
crates/sendbox-project/tests/fixtures/: bridge-expected.json
crates/sendbox-project/tests/fixtures/csharp/: Fixture.csproj
crates/sendbox-project/tests/fixtures/elixir/: mix.exs
crates/sendbox-project/tests/fixtures/go/: go.mod
crates/sendbox-project/tests/fixtures/java/: pom.xml
crates/sendbox-project/tests/fixtures/malformed/: package.json
crates/sendbox-project/tests/fixtures/node-ts/: package.json
crates/sendbox-project/tests/fixtures/php/: composer.json
crates/sendbox-project/tests/fixtures/python/: pyproject.toml  requirements.txt
crates/sendbox-project/tests/fixtures/ruby/: Gemfile
crates/sendbox-project/tests/fixtures/rust/: Cargo.toml
crates/sendbox-project/tests/fixtures/swift/: Package.swift
crates/sendbox-project/tests/fixtures/unknown/: README.txt
crates/sendbox-protocol/: Cargo.toml
crates/sendbox-protocol/src/: codec.rs  crypto.rs  error.rs  frame.rs  handshake.rs  lib.rs  limits.rs  operations.rs  types.rs
crates/sendbox-protocol/tests/: connection.rs  encoding.rs  unix_socket.rs
crates/sendbox-runtime/: Cargo.toml
crates/sendbox-runtime-apple/: Cargo.toml
crates/sendbox-runtime-apple/src/: channel.rs  command.rs  executable.rs  lib.rs  provider.rs
crates/sendbox-runtime-apple/tests/: authenticated_channel.rs  live.rs
crates/sendbox-runtime-hyperlight/: .gitignore  Cargo.toml
crates/sendbox-runtime-hyperlight/src/: lib.rs  tests.rs
crates/sendbox-runtime-hyperlight/tests/: live.rs
crates/sendbox-runtime-kata/: Cargo.toml
crates/sendbox-runtime-kata/src/: lib.rs
crates/sendbox-runtime/src/: cancellation.rs  capability.rs  channel.rs  cleanup.rs  clock.rs  error.rs  id.rs  lib.rs  lifecycle.rs  output.rs  process.rs  provider.rs  unavailable.rs
crates/sendbox-secrets/: Cargo.toml
crates/sendbox-secrets/src/: credential.rs  envelope.rs  error.rs  lib.rs  linux.rs  macos.rs  record.rs  types.rs
crates/sendbox-security/: Cargo.toml
crates/sendbox-security/src/: audit.rs  canonical.rs  error.rs  fs.rs  legacy.rs  lib.rs  provenance.rs  snapshot.rs
crates/sendbox-security/tests/: compatibility.rs  decoder_properties.rs
crates/sendbox-session-security/: Cargo.toml
crates/sendbox-session-security/src/: lib.rs  lifecycle.rs  migration.rs  supervisor.rs
crates/sendbox-session-security/tests/: lifecycle.rs  migration.rs  supervisor.rs
crates/sendbox-session-security/tests/fixtures/: supervisor-state-v1-empty.json  swift-supervisor-grants-v1.json
crates/sendbox-testkit/: Cargo.toml
crates/sendbox-testkit/src/: lib.rs
crates/sendbox-testkit/tests/: cleanup.rs  process.rs
fuzz/bpf/: Cargo.toml
fuzz/bpf/fuzz_targets/: event_decode.rs  manifest_decode.rs
fuzz/config/: Cargo.toml
fuzz/config/fuzz_targets/: yaml_roundtrip.rs
fuzz/credentials/: Cargo.toml
fuzz/credentials/fuzz_targets/: http1_request.rs
fuzz/git/: Cargo.toml
fuzz/git/fuzz_targets/: argv_alias.rs  remote_refspec.rs
fuzz/mcp/: Cargo.toml
fuzz/mcp/fuzz_targets/: frame_decode.rs  jsonrpc.rs  observation.rs
fuzz/project/: Cargo.toml
fuzz/project/fuzz_targets/: jsonc.rs  project_analysis.rs
fuzz/protocol/: Cargo.toml
fuzz/protocol/fuzz_targets/: frame_decode.rs  handshake_decode.rs
fuzz/secrets/: Cargo.toml
fuzz/secrets/fuzz_targets/: envelope_decode.rs  record_decode.rs
(+243 files in other folders)
