[workspace]
members = [
    "crates/sendbox-cli",
    "crates/sendbox-config",
    "crates/sendbox-core",
    "crates/sendbox-egress",
    "crates/sendbox-exec",
    "crates/sendbox-policy",
    "crates/sendbox-project",
    "crates/sendbox-protocol",
    "crates/sendbox-secrets",
    "crates/sendbox-runtime",
    "crates/sendbox-testkit",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"
repository = "https://github.com/mbianchidev/sendbox"

[workspace.dependencies]
async-trait = "0.1.89"
cap-std = "4.0.2"
clap = { version = "4.6.2", features = ["derive"] }
caps = "0.5.6"
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
getrandom = "0.4.3"
hickory-proto = "0.26.1"
http = "1.4.0"
hkdf = "0.13.0"
hmac = { version = "0.13.0", features = ["zeroize"] }
ipnet = "2.11.0"
jsonc-parser = { version = "0.33.0", features = ["serde"] }
libc = "0.2.177"
libseccomp = "0.4.0"
minicbor = { version = "2.2.2", features = ["std"] }
proptest = "1.11.0"
rlimit = "0.11.0"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"
socket2 = { version = "0.6.5", features = ["all"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
toml = "1.1.3"
unicode-normalization = "0.1.25"
url = "2.5.8"
zeroize = "1.9.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
