[package]
name = "sendbox-bpf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
