[package]
name = "sendbox-bundle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap.workspace = true
ed25519-dalek.workspace = true
rustix.workspace = true
sendbox-guest = { path = "../../guest/sendbox-guest" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
