[package]
name = "sendbox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sendbox-rs"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
sendbox-config = { path = "../sendbox-config" }
sendbox-core = { path = "../sendbox-core" }
sendbox-policy = { path = "../sendbox-policy" }
sendbox-project = { path = "../sendbox-project" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
