[package]
name = "sendbox-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sendbox-core = { path = "../sendbox-core" }
sendbox-policy = { path = "../sendbox-policy" }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
