[package]
name = "sendbox-exec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
getrandom.workspace = true
sendbox-core = { path = "../sendbox-core" }
sendbox-policy = { path = "../sendbox-policy" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
caps.workspace = true
libc.workspace = true
libseccomp.workspace = true
rlimit.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
