[package]
name = "sendbox-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"

[[bin]]
name = "sendbox-git-guard"
path = "src/bin/sendbox-git-guard.rs"
