[package]
name = "sendbox-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fail-closed MCP framing, policy, stdio brokering, project validation, and native observation parsing."

[dependencies]
async-trait.workspace = true
sendbox-config = { path = "../sendbox-config" }
sendbox-policy = { path = "../sendbox-policy" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "sync",
    "time",
] }
tokio-util.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[lints]
workspace = true
