[package]
name = "sendbox-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sendbox-core = { path = "../sendbox-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true

[lints]
workspace = true
