[package]
name = "sendbox-project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonc-parser.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
