[package]
name = "sendbox-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
getrandom.workspace = true
hkdf.workspace = true
hmac.workspace = true
minicbor.workspace = true
sendbox-core = { path = "../sendbox-core" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
