[package]
name = "sendbox-runtime-kata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
getrandom.workspace = true
sendbox-bundle = { path = "../sendbox-bundle" }
sendbox-core = { path = "../sendbox-core" }
sendbox-policy = { path = "../sendbox-policy" }
sendbox-runtime = { path = "../sendbox-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "process", "rt", "sync"] }
zeroize.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
sendbox-testkit = { path = "../sendbox-testkit" }
tempfile.workspace = true

[lints]
workspace = true
