[package]
name = "sendbox-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chacha20poly1305.workspace = true
getrandom.workspace = true
hkdf.workspace = true
http.workspace = true
minicbor.workspace = true
sendbox-core = { path = "../sendbox-core" }
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
url.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
cap-std = "4.0.2"
fs2 = "0.4.3"
libc = "0.2.183"
rustix = { version = "1.1.4", features = ["process"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
security-framework = "3.7.0"
security-framework-sys = "2.15.0"

[dev-dependencies]
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
