[package]
name = "sendbox-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
