[package]
name = "sendbox-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sendbox-runtime = { path = "../sendbox-runtime" }
tempfile.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31.1", default-features = false, features = ["process", "signal"] }

[[bin]]
name = "sendbox-process-fixture"
path = "src/bin/process_fixture.rs"

[lints]
workspace = true
