[package]
name = "sendbox-bpf-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
sendbox-bpf = { path = "../../crates/sendbox-bpf" }
sendbox-bundle = { path = "../../crates/sendbox-bundle" }

[[bin]]
name = "event_decode"
path = "fuzz_targets/event_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_decode"
path = "fuzz_targets/manifest_decode.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
