[package]
name = "sendbox-credentials-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
sendbox-credentials = { path = "../../crates/sendbox-credentials" }

[[bin]]
name = "http1_request"
path = "fuzz_targets/http1_request.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
