[package]
name = "sendbox-mcp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
sendbox-mcp = { path = "../../crates/sendbox-mcp" }

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jsonrpc"
path = "fuzz_targets/jsonrpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "observation"
path = "fuzz_targets/observation.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
