[package]
name = "sendbox-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
sendbox-protocol = { path = "../../crates/sendbox-protocol" }

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "handshake_decode"
path = "fuzz_targets/handshake_decode.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
