[package]
name = "sendbox-secrets-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
sendbox-secrets = { path = "../../crates/sendbox-secrets" }

[[bin]]
name = "record_decode"
path = "fuzz_targets/record_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "envelope_decode"
path = "fuzz_targets/envelope_decode.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
